--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,39 @@ cabal-dev
 *.chi
 *.chs.h
 .virthualenv
+*~
+._DS_Store
+auto/
+*.acn
+*.acr
+*.fls
+*.alg
+*.aux
+*.bbl
+*.blg
+*.dvi
+*.fdb_latexmk
+*.glg
+*.glo
+*.gls
+*.idx
+*.ilg
+*.ind
+*.ist
+*.lof
+*.log
+*.lot
+*.maf
+*.mtc
+*.mtc0
+*.nav
+*.nlo
+*.out
+*.pdfsync
+*.ps
+*.snm
+*.synctex.gz
+*.toc
+*.vrb
+*.xdy
+*.tdo
